# OrganizePhotos

./: .gitignore  README.md  constants.py  example.py  get_matching_files.py  group_files_by_date.py  grouping_level.py  main.py  main_window.py  move_files.py  move_files_to_main_folder.py  organize_photos.py  organize_photos_app.py  pyproject.toml  select_folder.py  settings_manager.py
tests/: test_determine_progress_bar_step_increment.py  test_get_matching_files.py  test_group_files_by_date.py  test_move_files.py  test_move_files_to_main_folder.py  test_select_folder.py  test_settings_manager.py
